@@ -24,7 +24,6 @@ import org.apache.nifi.serialization.record.util.DataTypeUtils;
 
 public class IsBlank extends FunctionFilter {
 
-
     public IsBlank(RecordPathSegment recordPath) {
         super(recordPath);
     }
@@ -36,6 +35,6 @@ public class IsBlank extends FunctionFilter {
             return true;
         }
 
-        return fieldVal.trim().isEmpty();
+        return fieldVal.isBlank();
     }
 }
