@@ -17,6 +17,46 @@
 
 package org.apache.nifi.avro;
 
+import org.apache.avro.Conversions;
+import org.apache.avro.JsonProperties;
+import org.apache.avro.LogicalType;
+import org.apache.avro.LogicalTypes;
+import org.apache.avro.Schema;
+import org.apache.avro.Schema.Field;
+import org.apache.avro.Schema.Type;
+import org.apache.avro.generic.GenericArray;
+import org.apache.avro.generic.GenericData;
+import org.apache.avro.generic.GenericData.Array;
+import org.apache.avro.generic.GenericFixed;
+import org.apache.avro.generic.GenericRecord;
+import org.apache.avro.specific.SpecificRecord;
+import org.apache.avro.util.Utf8;
+import org.apache.commons.lang3.StringUtils;
+import org.apache.commons.lang3.tuple.ImmutablePair;
+import org.apache.commons.lang3.tuple.Pair;
+import org.apache.nifi.serialization.SimpleRecordSchema;
+import org.apache.nifi.serialization.record.DataType;
+import org.apache.nifi.serialization.record.MapRecord;
+import org.apache.nifi.serialization.record.Record;
+import org.apache.nifi.serialization.record.RecordField;
+import org.apache.nifi.serialization.record.RecordFieldType;
+import org.apache.nifi.serialization.record.RecordSchema;
+import org.apache.nifi.serialization.record.SchemaIdentifier;
+import org.apache.nifi.serialization.record.StandardSchemaIdentifier;
+import org.apache.nifi.serialization.record.field.FieldConverter;
+import org.apache.nifi.serialization.record.field.StandardFieldConverterRegistry;
+import org.apache.nifi.serialization.record.type.ArrayDataType;
+import org.apache.nifi.serialization.record.type.ChoiceDataType;
+import org.apache.nifi.serialization.record.type.DecimalDataType;
+import org.apache.nifi.serialization.record.type.EnumDataType;
+import org.apache.nifi.serialization.record.type.MapDataType;
+import org.apache.nifi.serialization.record.type.RecordDataType;
+import org.apache.nifi.serialization.record.util.DataTypeUtils;
+import org.apache.nifi.serialization.record.util.IllegalTypeConversionException;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
+import java.io.InputStream;
 import java.math.BigDecimal;
 import java.math.RoundingMode;
 import java.nio.ByteBuffer;
@@ -43,44 +83,6 @@ import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.TimeUnit;
 import java.util.function.Function;
-import org.apache.avro.Conversions;
-import org.apache.avro.JsonProperties;
-import org.apache.avro.LogicalType;
-import org.apache.avro.LogicalTypes;
-import org.apache.avro.Schema;
-import org.apache.avro.Schema.Field;
-import org.apache.avro.Schema.Type;
-import org.apache.avro.generic.GenericData;
-import org.apache.avro.generic.GenericData.Array;
-import org.apache.avro.generic.GenericFixed;
-import org.apache.avro.generic.GenericRecord;
-import org.apache.avro.specific.SpecificRecord;
-import org.apache.avro.util.Utf8;
-import org.apache.commons.io.IOUtils;
-import org.apache.commons.lang3.StringUtils;
-import org.apache.commons.lang3.tuple.ImmutablePair;
-import org.apache.commons.lang3.tuple.Pair;
-import org.apache.nifi.serialization.SimpleRecordSchema;
-import org.apache.nifi.serialization.record.DataType;
-import org.apache.nifi.serialization.record.MapRecord;
-import org.apache.nifi.serialization.record.Record;
-import org.apache.nifi.serialization.record.RecordField;
-import org.apache.nifi.serialization.record.RecordFieldType;
-import org.apache.nifi.serialization.record.RecordSchema;
-import org.apache.nifi.serialization.record.SchemaIdentifier;
-import org.apache.nifi.serialization.record.StandardSchemaIdentifier;
-import org.apache.nifi.serialization.record.field.FieldConverter;
-import org.apache.nifi.serialization.record.field.StandardFieldConverterRegistry;
-import org.apache.nifi.serialization.record.type.ArrayDataType;
-import org.apache.nifi.serialization.record.type.ChoiceDataType;
-import org.apache.nifi.serialization.record.type.DecimalDataType;
-import org.apache.nifi.serialization.record.type.EnumDataType;
-import org.apache.nifi.serialization.record.type.MapDataType;
-import org.apache.nifi.serialization.record.type.RecordDataType;
-import org.apache.nifi.serialization.record.util.DataTypeUtils;
-import org.apache.nifi.serialization.record.util.IllegalTypeConversionException;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
 public class AvroTypeUtil {
     private static final Logger logger = LoggerFactory.getLogger(AvroTypeUtil.class);
@@ -203,7 +205,7 @@ public class AvroTypeUtil {
     }
 
     private static Schema buildAvroSchema(final DataType dataType, final String fieldName, String fieldNamePrefix, final boolean nullable) {
-       Schema schema = null;
+        Schema schema = null;
 
         switch (dataType.getFieldType()) {
             case ARRAY:
@@ -712,7 +714,6 @@ public class AvroTypeUtil {
                     return DataTypeUtils.toInteger(rawValue, fieldName);
                 }
 
-
                 if (LOGICAL_TYPE_DATE.equals(logicalType.getName())) {
                     final String format = determineDataType(fieldSchema).getFormat();
                     final FieldConverter<Object, LocalDate> fieldConverter = StandardFieldConverterRegistry.getRegistry().getFieldConverter(LocalDate.class);
@@ -774,32 +775,67 @@ public class AvroTypeUtil {
                     final BigDecimal decimal = rawDecimal.scale() == desiredScale
                         ? rawDecimal : rawDecimal.setScale(desiredScale, RoundingMode.HALF_UP);
                     return fieldSchema.getType() == Type.BYTES
-                        ? new Conversions.DecimalConversion().toBytes(decimal, fieldSchema, logicalType) //return GenericByte
-                        : new Conversions.DecimalConversion().toFixed(decimal, fieldSchema, logicalType); //return GenericFixed
+                        ? new Conversions.DecimalConversion().toBytes(decimal, fieldSchema, logicalType)
+                        : new Conversions.DecimalConversion().toFixed(decimal, fieldSchema, logicalType);
                 }
                 if (rawValue instanceof byte[]) {
-                    return ByteBuffer.wrap((byte[]) rawValue);
+                    final byte[] bytes = (byte[]) rawValue;
+                    if (fieldSchema.getType() == Type.FIXED) {
+                        final int expectedSize = fieldSchema.getFixedSize();
+                        if (bytes.length != expectedSize) {
+                            throw new IllegalTypeConversionException("Cannot convert byte[] of length " + bytes.length +
+                                " to FIXED(" + expectedSize + ") for field '" + fieldName + "'");
+                        }
+                        return new GenericData.Fixed(fieldSchema, bytes);
+                    }
+                    return ByteBuffer.wrap(bytes);
                 }
                 if (rawValue instanceof String) {
-                    return ByteBuffer.wrap(((String) rawValue).getBytes(charset));
+                    final byte[] bytes = ((String) rawValue).getBytes(charset);
+                    if (fieldSchema.getType() == Type.FIXED) {
+                        final int expectedSize = fieldSchema.getFixedSize();
+                        if (bytes.length != expectedSize) {
+                            throw new IllegalTypeConversionException("Cannot convert String bytes of length " + bytes.length +
+                                " to FIXED(" + expectedSize + ") for field '" + fieldName + "'");
+                        }
+                        return new GenericData.Fixed(fieldSchema, bytes);
+                    }
+                    return ByteBuffer.wrap(bytes);
                 }
                 if (rawValue instanceof Object[]) {
-                    if (fieldSchema.getType() == Type.FIXED && "INT96".equals(fieldSchema.getName())) {
-                        Object[] rawObjects = (Object[]) rawValue;
-                        byte[] rawBytes = new byte[rawObjects.length];
-                        for (int elementIndex = 0; elementIndex < rawObjects.length; elementIndex++) {
-                            rawBytes[elementIndex] = (Byte) rawObjects[elementIndex];
+                    final Object[] rawObjects = (Object[]) rawValue;
+                    final byte[] bytes = new byte[rawObjects.length];
+                    for (int elementIndex = 0; elementIndex < rawObjects.length; elementIndex++) {
+                        final Object o = rawObjects[elementIndex];
+                        if (!(o instanceof Byte)) {
+                            throw new IllegalTypeConversionException("Cannot convert non-Byte element in Object[] to binary for field '" + fieldName + "'");
                         }
-
-                        return new GenericData.Fixed(fieldSchema, rawBytes);
-                    } else {
-                        return convertByteArray((Object[]) rawValue);
+                        bytes[elementIndex] = (Byte) o;
                     }
+
+                    if (fieldSchema.getType() == Type.FIXED) {
+                        final int expectedSize = fieldSchema.getFixedSize();
+                        if (bytes.length != expectedSize) {
+                            throw new IllegalTypeConversionException("Cannot convert Object[] of length " + bytes.length +
+                                " to FIXED(" + expectedSize + ") for field '" + fieldName + "'");
+                        }
+                        return new GenericData.Fixed(fieldSchema, bytes);
+                    }
+                    return ByteBuffer.wrap(bytes);
                 }
                 try {
-                    if (rawValue instanceof Blob) {
-                        Blob blob = (Blob) rawValue;
-                        return ByteBuffer.wrap(IOUtils.toByteArray(blob.getBinaryStream()));
+                    if (rawValue instanceof Blob blob) {
+                        final InputStream binaryStream = blob.getBinaryStream();
+                        final byte[] bytes = binaryStream.readAllBytes();
+                        if (fieldSchema.getType() == Type.FIXED) {
+                            final int expectedSize = fieldSchema.getFixedSize();
+                            if (bytes.length != expectedSize) {
+                                throw new IllegalTypeConversionException("Cannot convert Blob of length " + bytes.length +
+                                    " to FIXED(" + expectedSize + ") for field '" + fieldName + "'");
+                            }
+                            return new GenericData.Fixed(fieldSchema, bytes);
+                        }
+                        return ByteBuffer.wrap(bytes);
                     } else {
                         throw new IllegalTypeConversionException("Cannot convert value " + rawValue + " of type " + rawValue.getClass() + " to a ByteBuffer");
                     }
@@ -947,7 +983,7 @@ public class AvroTypeUtil {
 
                 values.put(fieldName, coercedValue);
             } catch (Exception ex) {
-                logger.debug("fail to convert field {}", fieldName, ex );
+                logger.debug("fail to convert field {}", fieldName, ex);
                 throw ex;
             }
         }
@@ -981,13 +1017,27 @@ public class AvroTypeUtil {
             }
         }
 
+        final Optional<Schema> matchingFixed = findFixedSchemaMatchingSize(fieldSchema.getTypes(), originalValue);
+        if (matchingFixed.isPresent()) {
+            try {
+                return conversion.apply(matchingFixed.get());
+            } catch (IllegalTypeConversionException e) {
+                logger.debug("Failed to convert value {} to fixed schema {}", originalValue, matchingFixed.get(), e);
+            }
+        }
+
         final Optional<Schema> mostSuitableType = DataTypeUtils.findMostSuitableType(
                 originalValue,
                 getNonNullSubSchemas(fieldSchema),
                 AvroTypeUtil::determineDataType
         );
+
         if (mostSuitableType.isPresent()) {
-            return conversion.apply(mostSuitableType.get());
+            try {
+                return conversion.apply(mostSuitableType.get());
+            } catch (IllegalTypeConversionException e) {
+                logger.debug("Failed to convert value {} to most suitable schema {}", originalValue, mostSuitableType.get(), e);
+            }
         }
 
         for (final Schema subSchema : fieldSchema.getTypes()) {
@@ -1024,6 +1074,36 @@ public class AvroTypeUtil {
         return null;
     }
 
+    private static Optional<Schema> findFixedSchemaMatchingSize(final List<Schema> subSchemas, final Object value) {
+        final Integer binarySize = getBinarySize(value);
+        if (binarySize == null) {
+            return Optional.empty();
+        }
+
+        return subSchemas.stream()
+            .filter(schema -> schema.getType() == Type.FIXED && schema.getFixedSize() == binarySize)
+            .findFirst();
+    }
+
+    private static Integer getBinarySize(final Object value) {
+        if (value instanceof byte[]) {
+            return ((byte[]) value).length;
+        }
+        if (value instanceof ByteBuffer byteBuffer) {
+            return byteBuffer.remaining();
+        }
+        if (value instanceof Object[] objects) {
+            if (objects.length == 0 || objects[0] instanceof Byte) {
+                return objects.length;
+            }
+        }
+        if (value instanceof GenericFixed fixed) {
+            return fixed.bytes().length;
+        }
+
+        return null;
+    }
+
     private static boolean isCompatibleDataType(final Object value, final DataType dataType) {
         if (value == null) {
             return false;
@@ -1054,7 +1134,6 @@ public class AvroTypeUtil {
         return DataTypeUtils.isCompatibleDataType(value, dataType);
     }
 
-
     /**
      * Convert an Avro object to a normal Java objects for further processing.
      * The counter-part method which convert a raw value to an Avro object is {@link #convertToAvroObject(Object, Schema, String, Charset)}
@@ -1074,9 +1153,17 @@ public class AvroTypeUtil {
                 final String logicalName = logicalType.getName();
                 if (LOGICAL_TYPE_DATE.equals(logicalName)) {
                     // date logical name means that the value is number of days since Jan 1, 1970
+                    // Handle both Integer (legacy) and LocalDate (newer Avro libraries)
+                    if (value instanceof LocalDate localDate) {
+                        return java.sql.Date.valueOf(localDate);
+                    }
                     return java.sql.Date.valueOf(LocalDate.ofEpochDay((int) value));
                 } else if (LOGICAL_TYPE_TIME_MILLIS.equals(logicalName)) {
                     // time-millis logical name means that the value is number of milliseconds since midnight.
+                    // Handle both Integer (legacy) and LocalTime (newer Avro libraries)
+                    if (value instanceof LocalTime localTime) {
+                        return Time.valueOf(localTime);
+                    }
                     return new Time((int) value);
                 }
 
@@ -1090,10 +1177,22 @@ public class AvroTypeUtil {
 
                 final String logicalName = logicalType.getName();
                 if (LOGICAL_TYPE_TIME_MICROS.equals(logicalName)) {
+                    // Handle both Long (legacy) and LocalTime (newer Avro libraries)
+                    if (value instanceof LocalTime localTime) {
+                        return Time.valueOf(localTime);
+                    }
                     return new Time(TimeUnit.MICROSECONDS.toMillis((long) value));
                 } else if (LOGICAL_TYPE_TIMESTAMP_MILLIS.equals(logicalName)) {
+                    // Handle both Long (legacy) and Instant (newer Avro libraries)
+                    if (value instanceof Instant instant) {
+                        return Timestamp.from(instant);
+                    }
                     return new Timestamp((long) value);
                 } else if (LOGICAL_TYPE_TIMESTAMP_MICROS.equals(logicalName)) {
+                    // Handle both Long (legacy) and Instant (newer Avro libraries)
+                    if (value instanceof Instant instant) {
+                        return Timestamp.from(instant);
+                    }
                     return new Timestamp(TimeUnit.MICROSECONDS.toMillis((long) value));
                 }
                 break;
@@ -1147,7 +1246,7 @@ public class AvroTypeUtil {
                     }
                     return valueArray;
                 } else {
-                    final GenericData.Array<?> array = (GenericData.Array<?>) value;
+                    final GenericArray<?> array = (GenericArray<?>) value;
                     final Object[] valueArray = new Object[array.size()];
                     for (int i = 0; i < array.size(); i++) {
                         final Schema elementSchema = avroSchema.getElementType();
