@@ -840,7 +840,6 @@ public class StandardServiceFacade implements ServiceFacade {
         return streamingOutput;
     }
 
-
     // ---------------------- Field methods ----------------------------------------------
 
     @Override
@@ -1037,7 +1036,6 @@ public class StandardServiceFacade implements ServiceFacade {
         return authorizationService.getCurrentUser();
     }
 
-
     // ---------------------- Authorization methods -----------------------------
 
     private void verifyAuthorizerIsManaged() {
@@ -1231,7 +1229,7 @@ public class StandardServiceFacade implements ServiceFacade {
     }
 
     private void validateDeleteOfRevisableEntity(final String identifier, final RevisionInfo revision, final String entityTypeName) {
-        if (identifier == null || identifier.trim().isEmpty()) {
+        if (identifier == null || identifier.isBlank()) {
             throw new IllegalArgumentException(entityTypeName + " identifier is required");
         }
 
